--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,7 +12,7 @@
     <div class="main-content">
         {{>header}}
         <img class="portrait" src="img/thinking batman.gif"/>
-        <p>This site was created by using data from mapbox.com and darksky.net.</p>
+        <p>This site was created by using data from <b>mapbox.com</b> and <b>darksky.net</b>.</p>
     </div>
     {{>footer}}
 </body>
