--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,6 +18,7 @@
         </form>
         <p id='msg-1'></p>
         <p id='msg-2'></p>
+        <p id='msg-3'></p>
     </div>
     {{>footer}}
 
