--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -19,6 +19,8 @@
         <p id='msg-1'></p>
         <p id='msg-2'></p>
         <p id='msg-3'></p>
+        <p id='msg-4'></p>
+        <p id='msg-5'></p>
     </div>
     {{>footer}}
 
